bug with background wallpaper not showing on smaller screens fixed

--- a/css/jsClasses.css
+++ b/css/jsClasses.css
@@ -35,7 +35,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-
+  }
     .booksLeftDescriptionAdjust {
       margin-left: 375px;
     }
@@ -124,13 +124,13 @@
       max-width: 100%;
     }
 
-    .backgroundChange {
+    /* .backgroundChange {
       background: url(../images/SpaceWallpaper.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
-    }
+    } */
 
     .booksLeftDescriptionAdjust {
       margin-left: auto;
